--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,16 +35,16 @@ dev = [
   "bandit>=1.9.2",
   "black>=25.12.0",
   "build>=1.3.0",
-  "coverage>=7.13.0",
+  "coverage>=7.13.1",
   "isort>=7.0.0",
   "mypy>=1.19.1",
   "pytest>=9.0.2",
   "ruff>=0.14.10",
   "setuptools>=80.9.0",
-  "tombi>=0.7.11",
+  "tombi>=0.7.14",
   "toml-run>=0.0.2",
-  "ty>=0.0.7",
-  "types-PyYAML>=0.0.1",
+  "ty>=0.0.9",
+  "types-PyYAML>=6.0.12.20250915",
   "validate-pyproject[all]>=0.24.1",
   "yamllint>=1.37.1",
 ]
